<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_no_network"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="gone"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_wifi"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_no_wifi" />

        <TextView
            android:id="@+id/tv_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/network_error"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_network_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/no_internet_try_again"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/refresh_layout_click"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginTop="40dp"
            app:mrl_rippleColor="@color/mr_rippleColor"
            app:mrl_rippleDuration="400"
            app:mrl_rippleFadeDuration="100"
            app:mrl_rippleRoundedCorners="1dp">

            <RelativeLayout
                android:id="@+id/rl_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/outline_layout_selector"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_refresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/network_refresh"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </RelativeLayout>
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>