<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints,RtlHardcoded,VectorDrawableCompat,NotSibling"
    tools:context=".activity.StickerFullScreenActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:background="#F2F2F2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"
        android:background="@color/white">

      <com.balysv.materialripple.MaterialRippleLayout
          android:id="@+id/mrl_back"
          style="@style/back"
          android:paddingTop="5.5dp"
          android:paddingBottom="5.5dp"
          app:mrl_rippleColor="@color/mr_rippleColor"
          app:mrl_rippleDuration="400"
          app:mrl_rippleFadeDuration="100">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true">

          <androidx.appcompat.widget.AppCompatImageView
              android:id="@+id/iv_back"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerInParent="true"
              android:layout_marginLeft="5dp"
              android:layout_marginBottom="15dp"
              app:srcCompat="@drawable/ic_back" />

        </RelativeLayout>
      </com.balysv.materialripple.MaterialRippleLayout>

      <TextView
          android:id="@+id/tv_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerInParent="true"
          android:text="@string/title_stickers_fullscreen"
          android:textColor="#3F3F3F"
          android:textSize="20sp"
          android:textStyle="bold"
          app:layout_constraintStart_toEndOf="@+id/mrl_back"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPackName"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/cl_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


      <com.facebook.drawee.view.SimpleDraweeView
          android:id="@+id/trayImage"
          android:layout_width="50dp"
          android:layout_height="match_parent"
          android:layout_marginStart="16dp"
          android:adjustViewBounds="true"
          android:scaleType="fitCenter"
          app:retryImage="@drawable/sticker_error"
          app:failureImage="@drawable/sticker_error"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>


      <TextView
          android:id="@+id/pack_name"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_marginStart="10dp"
          android:gravity="center_vertical"
          android:textSize="18sp"
          android:textStyle="bold"
          tools:text="@string/Pack_Name"
          app:layout_constraintTop_toTopOf="@id/trayImage"
          app:layout_constraintStart_toEndOf="@id/trayImage"
          app:layout_constraintBottom_toBottomOf="@id/trayImage"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/clPackName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/clButtonClick">

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rvAllStickers"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clipToPadding="false"
          android:fadingEdge="horizontal"
          android:fadingEdgeLength="30dp"
          android:fillViewport="false"
          android:requiresFadingEdge="vertical"
          android:scrollbars="none"
          app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
          app:spanCount="4"
          tools:listitem="@layout/item_sticker_fullscreen_preview"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />

      <com.facebook.drawee.view.SimpleDraweeView
          android:id="@+id/stickerDetailsExpandedSticker"
          android:layout_width="128dp"
          android:layout_height="128dp"
          android:scaleType="centerCrop"
          android:visibility="invisible"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDownloadedButtonView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/clButtonClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">

      <View
          android:id="@+id/viewDownloadedShare"
          android:layout_width="0dp"
          android:layout_height="?android:attr/actionBarSize"
          android:background="@drawable/drawable_bg_share_sticker"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/viewDownloadedDelete"
          app:layout_constraintHorizontal_bias="0.5"
          android:layout_marginRight="5dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/textDownloadedShare"
          android:layout_width="wrap_content"
          android:layout_height="?android:attr/actionBarSize"
          android:layout_marginHorizontal="20dp"
          android:drawablePadding="10dp"
          android:gravity="center"
          android:text="@string/downloaded_share"
          android:textColor="@color/white"
          android:textSize="18sp"
          app:drawableStartCompat="@drawable/ic_share"
          app:layout_constraintStart_toStartOf="@+id/viewDownloadedShare"
          app:layout_constraintTop_toTopOf="@+id/viewDownloadedShare"
          app:layout_constraintEnd_toEndOf="@id/viewDownloadedShare"
          app:layout_constraintBottom_toBottomOf="@id/viewDownloadedShare"/>

      <View
          android:id="@+id/viewDownloadedDelete"
          android:layout_width="0dp"
          android:layout_height="?android:attr/actionBarSize"
          android:background="@drawable/drawable_bg_delete"
          app:layout_constraintEnd_toEndOf="parent"
          android:layout_marginStart="5dp"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toEndOf="@+id/viewDownloadedShare"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"/>

      <TextView
          android:id="@+id/textDownloadedDelete"
          android:layout_width="wrap_content"
          android:layout_height="?android:attr/actionBarSize"
          android:layout_marginHorizontal="20dp"
          android:drawablePadding="10dp"
          android:gravity="center"
          android:text="@string/downloaded_delete"
          android:textColor="@color/white"
          android:textSize="18sp"
          app:drawableStartCompat="@drawable/ic_delete"
          app:layout_constraintStart_toStartOf="@+id/viewDownloadedDelete"
          app:layout_constraintTop_toTopOf="@+id/viewDownloadedDelete"
          app:layout_constraintEnd_toEndOf="@id/viewDownloadedDelete"
          app:layout_constraintBottom_toBottomOf="@id/viewDownloadedDelete" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clButtonClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/clRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layoutAdView">

    <View
        android:id="@+id/viewWhatsapp"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/drawable_bg_whatsapp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textAddToWhatsApp"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center"
        android:text="@string/add_to_whatsapp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:drawableStartCompat="@drawable/ic_whatsapp"
        android:drawablePadding="10dp"/>

    <View
        android:id="@+id/viewShareSticker"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/drawable_bg_share_sticker"
        app:layout_constraintTop_toBottomOf="@+id/viewWhatsapp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textShareSticker"
        android:layout_width="wrap_content"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center"
        android:text="@string/share_sticker"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="@+id/viewShareSticker"
        app:layout_constraintStart_toStartOf="@+id/viewShareSticker"
        app:layout_constraintEnd_toEndOf="@+id/viewShareSticker"
        app:layout_constraintBottom_toBottomOf="@+id/viewShareSticker"
        app:drawableStartCompat="@drawable/ic_share"
        android:drawablePadding="10dp"/>

      <View
          android:id="@+id/viewFreeEmoji"
          android:layout_width="match_parent"
          android:layout_height="?android:attr/actionBarSize"
          android:background="@drawable/drawable_bg_whatsapp"
          android:layout_marginTop="10dp"
          app:layout_constraintTop_toBottomOf="@+id/viewShareSticker"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />

      <TextView
          android:id="@+id/textFreeEmoji"
          android:layout_width="wrap_content"
          android:layout_height="?android:attr/actionBarSize"
          android:gravity="center"
          android:text="@string/free_emoji"
          android:textColor="@color/white"
          android:textSize="18sp"
          android:layout_marginHorizontal="20dp"
          app:layout_constraintTop_toTopOf="@+id/viewFreeEmoji"
          app:layout_constraintStart_toStartOf="@+id/viewFreeEmoji"
          app:layout_constraintEnd_toEndOf="@+id/viewFreeEmoji"
          app:layout_constraintBottom_toBottomOf="@+id/viewFreeEmoji"
          app:drawableStartCompat="@drawable/ic_free_emoji"
          android:drawablePadding="10dp"/>

      <androidx.constraintlayout.widget.Group
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:constraint_referenced_ids="viewWhatsapp,textAddToWhatsApp"
          android:id="@+id/groupWhatsApp" />

      <androidx.constraintlayout.widget.Group
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:constraint_referenced_ids="viewShareSticker,textShareSticker"
          android:id="@+id/groupShareSticker"/>

      <androidx.constraintlayout.widget.Group
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:constraint_referenced_ids="viewFreeEmoji,textFreeEmoji"
          android:id="@+id/groupFreeEmoji"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/layoutAdView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <include
        android:id="@+id/no_network"
        layout="@layout/layout_no_network"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>